--- a/mainwin.ui
+++ b/mainwin.ui
@@ -7,20 +7,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1200</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>650</width>
+    <width>680</width>
     <height>480</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>800</width>
-    <height>600</height>
+    <width>1280</width>
+    <height>480</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -55,7 +55,7 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>6</number>
       </property>
       <property name="documentMode">
        <bool>true</bool>
@@ -70,7 +70,7 @@
           <x>120</x>
           <y>210</y>
           <width>523</width>
-          <height>67</height>
+          <height>183</height>
          </rect>
         </property>
         <property name="tabChangesFocus">
@@ -142,10 +142,10 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <widget class="QListWidget" name="lwPrevPages">
         <property name="geometry">
          <rect>
-          <x>120</x>
-          <y>296</y>
+          <x>656</x>
+          <y>42</y>
           <width>523</width>
-          <height>159</height>
+          <height>351</height>
          </rect>
         </property>
        </widget>
@@ -582,8 +582,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <widget class="QLabel" name="label_9">
         <property name="geometry">
          <rect>
-          <x>4</x>
-          <y>294</y>
+          <x>658</x>
+          <y>14</y>
           <width>101</width>
           <height>16</height>
          </rect>
@@ -595,8 +595,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <widget class="Line" name="line">
         <property name="geometry">
          <rect>
-          <x>-2</x>
-          <y>276</y>
+          <x>0</x>
+          <y>402</y>
           <width>647</width>
           <height>16</height>
          </rect>
@@ -621,8 +621,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <widget class="QLabel" name="verLabel">
         <property name="geometry">
          <rect>
-          <x>4</x>
-          <y>548</y>
+          <x>0</x>
+          <y>426</y>
           <width>119</width>
           <height>16</height>
          </rect>
@@ -2290,10 +2290,10 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <widget class="QPushButton" name="pbApply">
         <property name="geometry">
          <rect>
-          <x>680</x>
-          <y>510</y>
-          <width>83</width>
-          <height>25</height>
+          <x>670</x>
+          <y>306</y>
+          <width>101</width>
+          <height>39</height>
          </rect>
         </property>
         <property name="text">
@@ -2533,8 +2533,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <widget class="QGroupBox" name="groupBox_14">
         <property name="geometry">
          <rect>
-          <x>4</x>
-          <y>364</y>
+          <x>650</x>
+          <y>190</y>
           <width>349</width>
           <height>91</height>
          </rect>
@@ -2636,8 +2636,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <widget class="QGroupBox" name="groupBox_15">
         <property name="geometry">
          <rect>
-          <x>358</x>
-          <y>364</y>
+          <x>652</x>
+          <y>8</y>
           <width>281</width>
           <height>89</height>
          </rect>
@@ -2679,7 +2679,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
           <rect>
            <x>4</x>
            <y>28</y>
-           <width>261</width>
+           <width>107</width>
            <height>20</height>
           </rect>
          </property>
@@ -2690,13 +2690,26 @@ li.checked::marker { content: &quot;\2612&quot;; }
           <bool>true</bool>
          </property>
         </widget>
+        <widget class="QLineEdit" name="piGpio">
+         <property name="geometry">
+          <rect>
+           <x>156</x>
+           <y>26</y>
+           <width>113</width>
+           <height>25</height>
+          </rect>
+         </property>
+         <property name="placeholderText">
+          <string>GPIO Pin (17)</string>
+         </property>
+        </widget>
        </widget>
        <widget class="QGroupBox" name="groupBox_16">
         <property name="geometry">
          <rect>
-          <x>2</x>
-          <y>458</y>
-          <width>635</width>
+          <x>650</x>
+          <y>114</y>
+          <width>425</width>
           <height>63</height>
          </rect>
         </property>
@@ -2713,6 +2726,19 @@ li.checked::marker { content: &quot;\2612&quot;; }
           </rect>
          </property>
         </widget>
+       </widget>
+       <widget class="QLabel" name="label_8">
+        <property name="geometry">
+         <rect>
+          <x>958</x>
+          <y>28</y>
+          <width>209</width>
+          <height>29</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>On the DevTerm - Pin 41</string>
+        </property>
        </widget>
       </widget>
      </widget>
